# spiral-software

./: .buildinfo  .gitignore  CMakeLists.txt  Contributing.md  LICENSE  README.md  ReleaseNotes.md  _spiral.g  _spiral_win.g  bibliography.html  contribute.html  debugger.html  genindex.html  gethelp.html  gettingstarted.html  index.html  introduction.html  objects.inv  search.html  searchindex.js  spiral  spiral-git-update.sh  spiral-policy-compatibility.md  spiral.bat  spiral_debug.bat  spirald
.doctrees/: bibliography.doctree  contribute.doctree  debugger.doctree  environment.pickle  gethelp.doctree  gettingstarted.doctree  index.doctree  introduction.doctree
.doctrees/examples/: index.doctree
.doctrees/gap3/: control.doctree  datatypes.doctree  index.doctree  io.doctree
.doctrees/hardware/: avx.doctree  index.doctree  smp.doctree
.doctrees/infrastructure/: breakdown.doctree  compiler.doctree  index.doctree  rewrite.doctree  search.doctree
.doctrees/profiler/: index.doctree
.doctrees/spiral_objects/: classes.doctree  end2end.doctree  icode.doctree  index.doctree  namespaces.doctree  ruletrees.doctree  sigma_spl.doctree  spl.doctree  values.doctree
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-sphinx.yml  ubuntu.yml
_sources/: bibliography.rst.txt  debugger.rst.txt  gethelp.rst.txt  gettingstarted.rst.txt  introduction.rst.txt
_sources/examples/: index.rst.txt
_sources/gap3/: control.rst.txt  datatypes.rst.txt  index.rst.txt  io.rst.txt
_sources/hardware/: avx.rst.txt  index.rst.txt  smp.rst.txt
_sources/infrastructure/: breakdown.rst.txt  compiler.rst.txt  rewrite.rst.txt  search.rst.txt
_sources/profiler/: index.rst.txt
_sources/spiral_objects/: classes.rst.txt  icode.rst.txt  ruletrees.rst.txt  sigma_spl.rst.txt  spl.rst.txt  values.rst.txt
config/: _spiral.g.in  _spiral_win.g.in  spiral.bat.in  spiral.in  spiral_build_info.h.in  spiral_debug.bat.in  spirald.in
config/CMakeIncludes/: FindSphinx.cmake  RunSpiral.cmake  RunTestTarget.cmake  ScriptConfig.cmake  SetupCudaDefines.cmake  TestDefines.cmake  exectest.py
config/inno/: installer-readme.md  spiral-setup.iss
docs/: CMakeLists.txt  Doxyfile.in  buildsite.sh  conf.py  contribute.rst  index.rst
docs/examples/advanced/: hcolhello.rst  prunedmddft.rst  warpx1d.rst
docs/examples/basic/: dpsearch3d.rst  simdfft.rst
docs/examples/cuda/: mddft-batch-cuda.rst  mddft-cuda.rst  mdprdft-cuda.rst  mdrconv-cuda.rst  prdft-batch-cuda.rst
docs/infrastructure/: index.rst
docs/spiral_objects/: end2end.rst  index.rst  namespaces.rst
examples/: index.html
examples/advanced/: complexexpr.html  hcolhello.html  prconv3d.html  prunedmddft.html  vectorlength.html  warpx1d.html
examples/basic/: dpsearch.html  dpsearch3d.html  firstfft.html  ompfft.html  simdfft.html
examples/cuda/: mddft-batch-cuda.html  mddft-cuda.html  mdprdft-cuda.html  mdrconv-cuda.html  prdft-batch-cuda.html
gap/: CMakeLists.txt
gap/grp/: basic.grp  cryst.grp  groupid.grp  imf.grp  imf0.grp  imf10.grp  imf11.grp  imf12.grp  imf13.grp  imf14.grp  imf15.grp  imf16.grp  imf17.grp  imf18.grp  imf19.grp  imf1to9.grp  imf20.grp  imf21.grp  imf22.grp  imf23.grp  imf24.grp  irredsol.grp  matgrp.grp  perf.grp  perf0.grp  perf01.grp  perf02.grp  perf03.grp  perf04.grp  perf05.grp  perf06.grp  perf07.grp  perf08.grp  perf09.grp  perf10.grp  perf11.grp  perf12.grp  permgrp.grp  primitiv.grp  solvable.grp  (+34 more)
gap/lib/: abattoir.g  agcent.g  agclass.g  agcomple.g  agcoset.g  agctbl.g  aggroup.g  aghall.g  aghomomo.g  aginters.g  agnorm.g  agprops.g  agsubgrp.g  agwords.g  algebra.g  algfac.g  algfld.g  algfp.g  alghomom.g  algmat.g  base.g  cdaggrp.g  chartabl.g  classfun.g  colors.g  combinat.g  compileClasses  complex.g  ctautoms.g  ctbasic.g  ctcharac.g  ctclfhlp.g  ctcliffo.g  ctfilter.g  ctgapmoc.g  ctgeneri.g  ctlattic.g  ctmapcon.g  ctmapusi.g  ctpermch.g  (+75 more)
gap/src/: CMakeLists.txt  FindGlobals.sh  GapUtils.c  GapUtils.h  agcollec.c  agcollec.h  aggroup.c  aggroup.h  args.c  args.h  blister.c  blister.h  buf_list.c  buf_list.h  coding.c  coding.h  comments.c  comments.h  complex.c  complex.h  conf.h  costab.c  costab.h  cyclotom.c  cyclotom.h  debug.c  debug.h  double.c  double.h  endian.h  eval.c  eval.h  exceptions_def.h  exceptions_msg.h  extract_doc.awk  fft.c  fft.h  finfield.c  finfield.h  function.c  (+102 more)
gap3/: control.html  datatypes.html  index.html  io.html
hardware/: avx.html  index.html  smp.html
infrastructure/: breakdown.html  compiler.html  index.html  rewrite.html  search.html
lib/: smp2.c
namespaces/: init.g
namespaces/arep/: init.g  todo
namespaces/include/: complex_gcc.h  complex_gcc_sse.h  complex_gcc_sse2.h  complex_gcc_sse3.h  mm_malloc.h  omega16i.h  omega32.h  omega32c.h  omega32i.h  omega64.h  omega64c.h  omega64i.h  omega8i.h
namespaces/spiral/: TODO  approx.g  bench.gi  compilers.gi  complex_example.g  config.gi  cpus.gi  debug.gi  defaults.gi  init.g  isabelle.gi  islinux.g  iswindows.g.win  lisp.gi  (+10 more)
profiler/: LICENSE  README.md  index.html
profiler/targets/common/: CMakeLists-matrix.txt  CMakeLists-time.txt  CMakeLists-vector.txt  CMakeLists.txt  common_macros.h  cvector.c  cvector.cu  matrix.c  matrix.cu  papi_time.c  rdtsc.h  rdtsc_time.c  time.cu
spiral_objects/: classes.html  end2end.html  icode.html  index.html  namespaces.html  ruletrees.html  sigma_spl.html  spl.html  values.html
support/: CMakeLists.txt  catfiles.py  checkforGpu.c  checkforGpu.cu  exectest.py  get-spiral-pkgs.sh
tests/: AddTest.md  CMakeLists.txt  spiraltalker.py
tests/Advanced/: CMakeLists.txt  DFT_PD_Stage1.g  Hockney.g  Planewave-3D-FFT.g  WarpX-1D.g
tests/Basic/: CMakeLists.txt  Memmgr-test.g  basic_test.g  break-me.g  double-test.g  integers_test.g  print-test.g  profiler-test.g
tests/OpenMP/: CMakeLists.txt  OpenMP.g
tests/Scalar-Transforms/: CMakeLists.txt  DP-Search.g  Simple-FFT.g
tests/X86-SIMD/: 3D-FFT-AVX.g  CMakeLists.txt  FFT-with-SIMD.g
tests/basic/: CMakeLists.txt  anschk.awk  basic_test.g  break-me.g
tests/scalar-Transforms/: CMakeLists.txt  Simple-FFT.g
(+594 files in other folders)
